fix(esl-carousel): fix incorrect alignment of the grid carousel renderer if there are no enough slides

--- a/src/modules/esl-carousel/renderers/esl-carousel.grid.renderer.less
+++ b/src/modules/esl-carousel/renderers/esl-carousel.grid.renderer.less
@@ -20,10 +20,10 @@
     transition: transform 0.25s linear;
   }
 
-  &.esl-carousel-horizontal [esl-carousel-slide] {
+  &.esl-carousel-horizontal :is([esl-carousel-slide], [esl-carousel-fake-slide]) {
     width: var(--esl-slide-size);
   }
-  &.esl-carousel-vertical [esl-carousel-slide] {
+  &.esl-carousel-vertical :is([esl-carousel-slide], [esl-carousel-fake-slide]) {
     height: var(--esl-slide-size);
   }
 }
